<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:paddingTop="@dimen/paddingTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textStyle="bold|italic"/>

    <LinearLayout
        android:id="@+id/ll"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/paddingTop"
            android:text="@string/version_beta"
            android:textStyle="bold|italic"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/paddingTop"
            android:text="@string/build"
            android:textStyle="bold|italic"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:src="@mipmap/ic_launcher_foreground"
        android:layout_weight="0.15" />

</LinearLayout>