<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="@dimen/dialog_body">

    <EditText
        android:id="@+id/nombre_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/normal_padding"
        android:ems="10"
        android:hint="@string/nombre_input"
        android:inputType="textPersonName"
        android:padding="@dimen/edit_text_padding"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/contrasena_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nombre_input"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/padding_between"
        android:layout_marginTop="@dimen/normal_padding"
        android:ems="10"
        android:hint="@string/contrasena_input"
        android:inputType="textPassword"
        android:padding="@dimen/edit_text_padding"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/entrar_boton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/button_padding"
        android:paddingTop="@dimen/button_padding"
        android:text="@string/entrar_boton"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"/>

</LinearLayout>